fix(console): align all icons and titles in nav item flat tree
(cherry picked from commit d50d3df33fada843c4ea0bddf73515e5d0fd7ec2)

--- a/gravitee-apim-console-webui/src/portal/components/flat-tree/flat-tree.component.scss
+++ b/gravitee-apim-console-webui/src/portal/components/flat-tree/flat-tree.component.scss
@@ -96,6 +96,10 @@ $disappear-on-drag-transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
     width: 16px;
     height: 16px;
     margin-left: 4px;
+
+    &.expand-collapse-icon {
+      margin-left: 9px;
+    }
   }
 
   &__label {
